@@ -281,7 +281,8 @@ typedef DWORD FLONG;
 #define FILE_ATTRIBUTE_OFFLINE			0x00001000
 #define FILE_ATTRIBUTE_NOT_CONTENT_INDEXED	0x00002000
 #define FILE_ATTRIBUTE_ENCRYPTED		0x00004000
-#define FILE_ATTRIBUTE_VALID_FLAGS		0x00007fb7
+#define FILE_ATTRIBUTE_VIRTUAL			0x00010000
+#define FILE_ATTRIBUTE_VALID_FLAGS		0x00017fb7
 #define FILE_ATTRIBUTE_VALID_SET_FLAGS		0x000031a7
 				
 #define FILE_COPY_STRUCTURED_STORAGE		0x00000041
